# libbsb

./: .travis.yml  AUTHORS  BSBWidget.cpp  BSBWidget.h  ChangeLog  ImageMagick-5.5.7-bsb.patch  Makefile.am  Makefile.in  NEWS  README  TODO  bootstrap.sh  bsb.h  bsb2png.c  bsb2ppm.c  bsb2tif.c  bsb_io.c  bsbfix.c  bsbview.cpp  configure  configure.ac  ppm2bsb.c  tif2bsb.c
bsbview_src/: BSBMainWindow.cpp  BSBMainWindow.h  BSBScrollArea.cpp  BSBScrollArea.h  BSBWidget.cpp  BSBWidget.h  bsbview.pro  main.cpp
doc/: bsb_file_format.html  contact.html  examples.html  index.html
msvc/: bsb2ppm.dsp  libbsb.dsw
tests/: Makefile.am  Makefile.in  at_wrap.in  australia4c.ppm  australia4c.tif  australia4c_be.tif  fix.at  png.at  ppm.at  testsuite  testsuite.at  tiff.at
